--- a/PSLD2/makefile
+++ b/PSLD2/makefile
@@ -6,8 +6,8 @@ cflags = -Wall -pedantic -O3 -std=c++20 -fsanitize=address
 #comando per terminale valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes ./main
 
 
-objects = main.o test.o mytest.o container.o exc2as.o exc2af.o exc2bs.o exc2bf.o 
-#exc1as.o exc1af.o exc1bs.o exc1bf.o 
+objects = main.o test.o mytest.o container.o exc1as.o exc1af.o exc1bs.o exc1bf.o exc2as.o exc2af.o exc2bs.o exc2bf.o 
+ 
 
 
 libcon = container/container.hpp container/testable.hpp container/traversable.hpp container/traversable.cpp container/mappable.hpp container/mappable.cpp container/dictionary.hpp container/dictionary.cpp container/linear.hpp container/linear.cpp
@@ -40,17 +40,17 @@ mytest.o: zmytest/test.cpp zmytest/test.hpp
 container.o: $(libcon) zlasdtest/container/container.cpp zlasdtest/container/container.hpp
 	$(cc) $(cflags) -c zlasdtest/container/container.cpp -o container.o
 
-# exc1as.o: $(libexc1a) zlasdtest/exercise1a/simpletest.cpp
-# 	$(cc) $(cflags) -c zlasdtest/exercise1a/simpletest.cpp -o exc1as.o
+exc1as.o: $(libexc1a) zlasdtest/exercise1a/simpletest.cpp
+	$(cc) $(cflags) -c zlasdtest/exercise1a/simpletest.cpp -o exc1as.o
 
-# exc1af.o: $(libexc1a) zlasdtest/exercise1a/fulltest.cpp
-# 	$(cc) $(cflags) -c zlasdtest/exercise1a/fulltest.cpp -o exc1af.o
+exc1af.o: $(libexc1a) zlasdtest/exercise1a/fulltest.cpp
+	$(cc) $(cflags) -c zlasdtest/exercise1a/fulltest.cpp -o exc1af.o
 
-# exc1bs.o: $(libexc1b) zlasdtest/exercise1b/simpletest.cpp
-# 	$(cc) $(cflags) -c zlasdtest/exercise1b/simpletest.cpp -o exc1bs.o
+exc1bs.o: $(libexc1b) zlasdtest/exercise1b/simpletest.cpp
+	$(cc) $(cflags) -c zlasdtest/exercise1b/simpletest.cpp -o exc1bs.o
 
-# exc1bf.o: $(libexc1b) zlasdtest/exercise1b/fulltest.cpp
-# 	$(cc) $(cflags) -c zlasdtest/exercise1b/fulltest.cpp -o exc1bf.o
+exc1bf.o: $(libexc1b) zlasdtest/exercise1b/fulltest.cpp
+	$(cc) $(cflags) -c zlasdtest/exercise1b/fulltest.cpp -o exc1bf.o
 
 exc2as.o: $(libexc2a) zlasdtest/exercise2a/simpletest.cpp
 	$(cc) $(cflags) -c zlasdtest/exercise2a/simpletest.cpp -o exc2as.o
